--- a/css/box-styles.css
+++ b/css/box-styles.css
@@ -1,5 +1,9 @@
 *{ margin: 0px;}
+/** Para este font se aplican abreviaciones para reducir tamaño de codigo */
 h1 {font: bold 25px verdana, sans-serif;}
 h2 { font: bold 14px verdana, sans-serif; }
+/** las etiquetas siguetes deben ser mostradas como dysplay como bloques..con propiedades especificas */
 header, section, footer, aside, nav, article, figure, figcaption, hgroup{ display: block; }
+/** text{aling alinea le texto dento del boby */
 body { text-align: center;}
+#group-elements{ margin: 15px auto;text-align: left;width: 960px; }
