--- a/css/box-styles.css
+++ b/css/box-styles.css
@@ -15,3 +15,4 @@ body { text-align: center;}
 
 #section-content { float: left; margin: 20px; width: 660px; }
 #aside-column { background: #CCCCCC; float: left; margin: 20px 0px; padding: 20px; width: 220px; }
+#footer-foot{ clear: both; text-align: center; padding: 20px; border-top: 3px solid #1b9104;}
