--- a/css/box-styles.css
+++ b/css/box-styles.css
@@ -16,3 +16,7 @@ body { text-align: center;}
 #section-content { float: left; margin: 20px; width: 660px; }
 #aside-column { background: #CCCCCC; float: left; margin: 20px 0px; padding: 20px; width: 220px; }
 #footer-foot{ clear: both; text-align: center; padding: 20px; border-top: 3px solid #1b9104;}
+
+article {background: #FFFBCC; border: 1px solid #999999; padding: 20px; margin-bottom: 15px; }
+article footer { text-align: right; } time { color: #999999; } 
+figcaption { font: italic 14px verdana, sans-serif; }
