--- a/css/box-styles.css
+++ b/css/box-styles.css
@@ -27,5 +27,6 @@ figcaption { font: italic 14px verdana, sans-serif; }
 #header-title { background: #117c11; border: 1px solid #0c110f; display: block; margin: 10px auto; padding: 20px; text-align: center; -moz-border-radius: 20px / 10px; -webkit-border-radius: 20px / 10px; border-radius: 20px / 10px; -moz-box-shadow: rgb(150,150,150) 5px 5px 10px; -webkit-box-shadow: rgb(150,150,150) 5px 5px 10px; box-shadow: rgb(150,150,150) 5px 5px 10px;
     background: -webkit-radial-gradient(center,circle,#da1616 0%, #006699 200%);
     background:     -moz-radial-gradient(center,circle,#da1616 0%, #006699 200%);
-    -moz-transform: skew(20deg); -webkit-transform: skew(20deg); }
+transform: translateY(100px) rotate(45deg) scaleX(0.3);}
+#header-title:hover{ -moz-transform: rotate(5deg); -webkit-transform: rotate(5deg); }
     
